--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -85,7 +85,7 @@ a {
 }
 
 button.btn {
-  @apply flex justify-center items-center py-4 px-14 border-2 border-black rounded-3xl outline-none focus:ring-2 focus:ring-black focus:ring-offset-2;
+  @apply flex justify-center items-center py-4 px-14 border-2 border-black rounded-3xl outline-none focus-within:ring-2 focus-within:ring-black focus-within:ring-offset-2;
   transition: all 200ms ease-in-out;
 }
 
