Creating a text input component and touching up styles on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -85,7 +85,7 @@ a {
 }
 
 button.btn {
-  @apply flex justify-center items-center py-4 px-14 border-2 border-black rounded-3xl outline-none focus-within:ring-2 focus-within:ring-black focus-within:ring-offset-2;
+  @apply flex justify-center items-center py-3 sm:py-4 px-8 sm:px-14 border-2 border-black rounded-3xl outline-none focus-within:ring-2 focus-within:ring-black focus-within:ring-offset-2;
   transition: all 200ms ease-in-out;
 }
 
@@ -112,7 +112,7 @@ form.form {
 
 .group > input {
   transition: all 200ms ease-in-out;
-  @apply border-2 border-black rounded-3xl p-4 outline-none;
+  @apply border-2 border-black rounded-3xl px-4 py-3 sm:py-4 outline-none;
 }
 
 .group > *:not(input) {
